src/styles/components/closing.css
.closing {
  padding: 115px 260px 114px;
  display: flex;
  place-items: center;
  flex-direction: column;
}

.closing__title {
  font-family: var(--font-family);
  font-weight: 700;
  font-size: 32px;
  line-height: 119%;
  letter-spacing: -0.02em;
  text-align: center;
  color: var(--color-text-primary);
  white-space: nowrap;
  padding-bottom: 24px;
}

.closing__desc {
  font-family: var(--font-family);
  font-weight: 400;
  font-size: 20px;
  line-height: 150%;
  letter-spacing: -0.02em;
  text-align: center;
  color: var(--color-text-secondary);
  padding-bottom: 57px;
  white-space: wrap;
  min-width: 420px;
}

@media (--md-viewport) {
  .closing__title {
    font-size: 48px;
  }

  .closing__desc {
    white-space: nowrap;
    min-width: auto;
  }
}

@media (--lg-viewport) {
  .closing__title {
    font-size: 52px;
  }

  .closing__desc {
    white-space: nowrap;
  }
}

@media (--xl-viewport) {
  .closing__title {
    text-align: left;
  }
}

